--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
-{ 
+{
   "name": "anuwh-md-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": { "start": "node server.js" },
-  "dependencies": { "@whiskeysockets/baileys": "^6.6.0",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.6.0",
     "express": "^4.18.2",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "ytdl-core": "^4.9.1",
-    "axios": "^1.5.0" } }
+    "axios": "^1.5.0"
+  }
+}
