--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "anuwh-md-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server.js"
   },
