--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "ytdl-core": "^4.9.1",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "uuid": "^9.0.0"
   }
 }
