--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "anuwh-md-bot",
+  "name": "Anuwh",
   "version": "1.0.0",
+  "description": "ANUWH WhatsApp Bot with Multi-Number Support",
   "main": "index.js",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.6.0",
+   "baileys": "npm:baileys-dtz",
     "express": "^4.18.2",
-    "qrcode": "^1.5.3",
-    "qrcode-terminal": "^0.12.0",
-    "ytdl-core": "^4.9.1",
-    "axios": "^1.5.0",
-    "uuid": "^9.0.0"
-  }
+    "fs-extra": "^11.2.0",
+    "pino": "^8.17.0",
+    "cheerio": "^1.1.2",
+    "jimp": "^0.16.1",
+    "@octokit/rest": "^20.0.2",
+    "child_process": "^1.0.2",
+    "denethdev-ytmp3":"1.0.3",
+    "yt-search": "2.12.1",
+    "path": "^0.12.7",
+    "axios": "^1.2.5",
+    "moment-timezone": "^0.6.0"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "multi-device",
+    "baileys",
+    "anuwh"
+  ],
+  "author": "anuwh",
+  "license": "MIT"
 }
