--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-   "baileys": "npm:baileys-dtz",
+    "baileys": "npm:baileys-dtz",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "pino": "^8.17.0",
     "cheerio": "^1.1.2",
     "jimp": "^0.16.1",
     "@octokit/rest": "^20.0.2",
-    "child_process": "^1.0.2",
-    "denethdev-ytmp3":"1.0.3",
+    "denethdev-ytmp3": "1.0.3",
     "yt-search": "2.12.1",
-    "path": "^0.12.7",
     "axios": "^1.2.5",
     "moment-timezone": "^0.6.0"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": "20.x"
   },
   "keywords": [
     "whatsapp",
