--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ANUWH WhatsApp Bot with Multi-Number Support",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
