--- a/package.json
+++ b/package.json
@@ -1,35 +1,14 @@
 {
-  "name": "Anuwh",
+  "name": "anuwa-md-mini",
   "version": "1.0.0",
-  "description": "ANUWH WhatsApp Bot with Multi-Number Support",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "baileys": "npm:baileys-dtz",
-    "express": "^4.18.2",
-    "fs-extra": "^11.2.0",
-    "pino": "^8.17.0",
-    "cheerio": "^1.1.2",
-    "jimp": "^0.16.1",
-    "@octokit/rest": "^20.0.2",
-    "denethdev-ytmp3": "1.0.3",
-    "yt-search": "2.12.1",
-    "axios": "^1.2.5",
-    "moment-timezone": "^0.6.0"
+    "start": "node server.js"
   },
   "engines": {
     "node": "20.x"
   },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "multi-device",
-    "baileys",
-    "anuwh"
-  ],
-  "author": "anuwh",
-  "license": "MIT"
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
