--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "anuwa-md-mini",
+  "name": "anuwh-md-mini-bot",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "ANUWH WhatsApp Mini Bot with Number Pairing",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "20.x"
-  },
   "dependencies": {
-    "express": "^4.19.2"
-  }
+    "@whiskeysockets/baileys": "^6.6.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "axios": "^1.5.0",
+    "moment-timezone": "^0.6.0"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "mini",
+    "anuwh",
+    "pairing"
+  ],
+  "author": "anuwh",
+  "license": "MIT"
 }
